# GaiaCameraService

./: GaiaCameraService.sln  README.md
GaiaCameraClient/: CameraClient.cs  GaiaCameraClient.csproj  PictureReader.cs
Native/: CMakeLists.txt
Native/GaiaCameraCalibrator/: CMakeLists.txt  Launcher.cpp
Native/GaiaCameraClient/: CMakeLists.txt  CameraClient.cpp  CameraClient.hpp  CameraReader.cpp  CameraReader.hpp  GaiaCameraClient.hpp  PictureReader.cpp  PictureReader.hpp
Native/GaiaCameraServer/: CMakeLists.txt  CameraDriverInterface.cpp  CameraDriverInterface.hpp  CameraInterface.cpp  CameraInterface.hpp  CameraServer.cpp  CameraServer.hpp  GaiaCameraServer.hpp  Launcher.hpp
Native/GaiaCameraViewer/: CMakeLists.txt  Launcher.cpp
Native/GaiaDahengServer/: CMakeLists.txt  DahengCamera.cpp  DahengCamera.hpp  DahengDriver.cpp  DahengDriver.hpp  DahengServer.cpp  DahengServer.hpp  Launcher.cpp
Native/GaiaHikServer/: CMakeLists.txt  HikCamera.cpp  HikCamera.hpp  HikDriver.cpp  HikDriver.hpp  Launcher.cpp
Native/GaiaVideoServer/: CMakeLists.txt  Launcher.cpp  VideoDriver.cpp  VideoDriver.hpp
Native/GaiaZedClient/: CMakeLists.txt  GaiaZedClient.hpp  ZedClient.cpp  ZedClient.hpp
Native/GaiaZedServer/: CMakeLists.txt  Launcher.cpp  ZedCamera.cpp  ZedCamera.hpp  ZedDriver.cpp  ZedDriver.hpp
